c/examples/writing-a-c-compiler-tests/tests/chapter_18/valid/extra_credit/other_features/label_tag_member_namespace.c
// Labels, structure tags, and member names are all different namespaces

int main(void) {
    struct x {
        int x;
    };
    struct x x = {10};
    goto x;
    return 0;
x:
    return x.x; // expected result in 10
}